--- a/mcbeConfig.json
+++ b/mcbeConfig.json
@@ -1,6 +1,6 @@
 {
   "preview-1.21.60.27": {
     "title": "1.21.60.27",
-    "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EZMmeptvzeFGqlz7KoOdh5ABEFLCrWkBTJXD34X_rx0SNA?download=1",
+    "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EZMmeptvzeFGqlz7KoOdh5ABEFLCrWkBTJXD34X_rx0SNA?download=1"
   }
 }
