--- a/mcbeConfig.json
+++ b/mcbeConfig.json
@@ -1,6 +1,6 @@
 {
   "official-1.21.62.01": {
-    "download": "https://api.onedrive.com/v1.0/shares/s!AhR7Tn1QhBcbgQQN9mnd4t2lXjaQ/root/content",
+    "download": "https://api.onedrive.com/v1.0/shares/s!AhR7Tn1QhBcbgQQN9mnd4t2lXjaQ/root/content"
   },
   "preview-1.21.60.27": {
     "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EZMmeptvzeFGqlz7KoOdh5ABEFLCrWkBTJXD34X_rx0SNA?download=1"
