--- a/mcbeConfig.json
+++ b/mcbeConfig.json
@@ -2,6 +2,9 @@
   "official-1.21.62.01": {
     "download": "https://github.com/Rgutyulkoimop/hqamff/releases/download/kjthaz/Microsoft.MinecraftUWP_1.21.6201.0_x64__8wekyb3d8bbwe.Appx"
   },
+  "preview-1.21.70.26": {
+    "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EZMmeptvzeFGqlz7KoOdh5ABEFLCrWkBTJXD34X_rx0SNA?download=1"
+  },
   "preview-1.21.60.27": {
     "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EZMmeptvzeFGqlz7KoOdh5ABEFLCrWkBTJXD34X_rx0SNA?download=1"
   },
