--- a/mcbeConfig.json
+++ b/mcbeConfig.json
@@ -3,7 +3,7 @@
     "download": "https://github.com/Rgutyulkoimop/hqamff/releases/download/kjthaz/Microsoft.MinecraftUWP_1.21.6201.0_x64__8wekyb3d8bbwe.Appx"
   },
   "preview-1.21.70.26": {
-    "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EZMmeptvzeFGqlz7KoOdh5ABEFLCrWkBTJXD34X_rx0SNA?download=1"
+    "download": "https://github.com/Rgutyulkoimop/hqamff/releases/download/vspjbg/Microsoft.MinecraftWindowsBeta_1.21.7026.0_x64__8wekyb3d8bbwe.Appx"
   },
   "preview-1.21.60.27": {
     "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EZMmeptvzeFGqlz7KoOdh5ABEFLCrWkBTJXD34X_rx0SNA?download=1"
