--- a/mcbeConfig.json
+++ b/mcbeConfig.json
@@ -8,7 +8,7 @@
   "preview-1.21.70.25": {
     "download": "https://github.com/Rgutyulkoimop/hqamff/releases/download/vspjbg/Microsoft.MinecraftWindowsBeta_1.21.7025.0_x64__8wekyb3d8bbwe.Appx"
   },
-  "preview-1.21.60.26": {
-    "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EZMmeptvzeFGqlz7KoOdh5ABEFLCrWkBTJXD34X_rx0SNA?download=1"
+  "preview-1.21.70.24": {
+    "download": "https://github.com/Rgutyulkoimop/hqamff/releases/download/vspjbg/Microsoft.MinecraftWindowsBeta_1.21.7024.0_x64__8wekyb3d8bbwe.Appx"
   }
 }
