--- a/mcbeConfig.json
+++ b/mcbeConfig.json
@@ -2,6 +2,9 @@
   "official-1.21.62.01": {
     "download": "https://github.com/Rgutyulkoimop/hqamff/releases/download/kjthaz/Microsoft.MinecraftUWP_1.21.6201.0_x64__8wekyb3d8bbwe.Appx"
   },
+  "official-1.21.60.10": {
+    "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EbNg1kClmjtPlU3D-MfuuBABOvqYvadOPQUHOgpa_z7GYQ?download=1"
+  },
   "preview-1.21.70.26": {
     "download": "https://github.com/Rgutyulkoimop/hqamff/releases/download/vspjbg/Microsoft.MinecraftWindowsBeta_1.21.7026.0_x64__8wekyb3d8bbwe.Appx"
   },
@@ -10,5 +13,8 @@
   },
   "preview-1.21.70.24": {
     "download": "https://github.com/Rgutyulkoimop/hqamff/releases/download/vspjbg/Microsoft.MinecraftWindowsBeta_1.21.7024.0_x64__8wekyb3d8bbwe.Appx"
+  },
+  "preview-1.21.70.23": {
+    "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EabO--DnlTNHhBt1AvPcZSYBIa8cPCZn9ZjIwX6gdG8SvA?download=1"
   }
 }
