--- a/mcbeConfig.json
+++ b/mcbeConfig.json
@@ -16,5 +16,8 @@
   },
   "preview-1.21.70.23": {
     "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EabO--DnlTNHhBt1AvPcZSYBIa8cPCZn9ZjIwX6gdG8SvA?download=1"
+  },
+  "preview-1.21.70.22": {
+    "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EdTnICaF-sBHpwPDo3KxVDcBYRIb8C3OG_UkqeZzI6Cy8Q?download=1"
   }
 }
