--- a/mcbeConfig.json
+++ b/mcbeConfig.json
@@ -19,5 +19,8 @@
   },
   "preview-1.21.70.22": {
     "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EdTnICaF-sBHpwPDo3KxVDcBYRIb8C3OG_UkqeZzI6Cy8Q?download=1"
+  },
+  "preview-1.21.70.20": {
+    "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EYq6mMzu6BFGs5Q2EeQHRpIBS2B6P9ZAr8czygCJNVN0TQ?download=1"
   }
 }
