--- a/mcbeConfig.json
+++ b/mcbeConfig.json
@@ -5,6 +5,9 @@
   "official-1.21.60.10": {
     "download": "https://remyod-my.sharepoint.com/:u:/g/personal/mcappx_od_remyyyz_com/EbNg1kClmjtPlU3D-MfuuBABOvqYvadOPQUHOgpa_z7GYQ?download=1"
   },
+  "preview-1.21.80.20": {
+    "download": "https://github.com/Rgutyulkoimop/hqamff/releases/download/vspjbg/Microsoft.MinecraftWindowsBeta_1.21.8020.0_x64__8wekyb3d8bbwe.Appx"
+  },
   "preview-1.21.70.26": {
     "download": "https://github.com/Rgutyulkoimop/hqamff/releases/download/vspjbg/Microsoft.MinecraftWindowsBeta_1.21.7026.0_x64__8wekyb3d8bbwe.Appx"
   },
