--- a/mcbeConfig.json
+++ b/mcbeConfig.json
@@ -1,4 +1,7 @@
 {
+  "official-1.21.71.01": {
+    "download": "https://github.com/Rgutyulkoimop/hqamff/releases/download/kjthaz/Microsoft.MinecraftUWP_1.21.7101.0_x64__8wekyb3d8bbwe.Appx"
+  },
   "official-1.21.62.01": {
     "download": "https://github.com/Rgutyulkoimop/hqamff/releases/download/kjthaz/Microsoft.MinecraftUWP_1.21.6201.0_x64__8wekyb3d8bbwe.Appx"
   },
